[gd_scene load_steps=18 format=3 uid="uid://cglh35410yr2o"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_52145"]
[ext_resource type="Texture2D" uid="uid://csb44q6iy7igm" path="res://assets/sprites/slime_green.png" id="1_yrpv3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o6m2b"]
atlas = ExtResource("1_yrpv3")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vio3j"]
atlas = ExtResource("1_yrpv3")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0oy7"]
atlas = ExtResource("1_yrpv3")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0kyi"]
atlas = ExtResource("1_yrpv3")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo7he"]
atlas = ExtResource("1_yrpv3")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy6bw"]
atlas = ExtResource("1_yrpv3")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1isxn"]
atlas = ExtResource("1_yrpv3")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xckmy"]
atlas = ExtResource("1_yrpv3")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucnm1"]
atlas = ExtResource("1_yrpv3")
region = Rect2(0, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnqcy"]
atlas = ExtResource("1_yrpv3")
region = Rect2(24, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_btl3q"]
atlas = ExtResource("1_yrpv3")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_velke"]
atlas = ExtResource("1_yrpv3")
region = Rect2(72, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdwcu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6m2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vio3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0oy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0kyi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo7he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy6bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1isxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xckmy")
}],
"loop": false,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucnm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnqcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btl3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_velke")
}],
"loop": false,
"name": &"get_hit",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2bmd"]
size = Vector2(16, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rvj0"]
size = Vector2(8, 10)

[node name="slime" type="CharacterBody2D" groups=["enemy", "slimes"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_52145")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_vdwcu")
animation = &"dying"
autoplay = "default"

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_x2bmd")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(8, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-8, 0)

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="die_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_2rvj0")
one_way_collision = true

[connection signal="slime_dead" from="." to="." method="die"]
[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
